--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 
   <h1> Adolfo Centeno </h1>
+  <h1> Version 2.0 </h1>
   <h2> Matricula: 27619 </h2>
   <h3> Credencial UV : </h3>
   <img src="https://firebasestorage.googleapis.com/v0/b/adsoftsito-javascript.appspot.com/o/javascript%2Fimages%2Ffacelogo.jpeg?alt=media&token=db38a5c2-c033-4d18-b8b8-deb1504aff07"> </br>
